--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: ruby
 dist: bionic
 rvm:
   - 2.6.3
+deploy:
+  provider: releases
+  api_key: GITHUB_AUTH_TOKEN
+  file: musl.tar.gz
+  skip_cleanup: true
