--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: ruby
 dist: bionic
 rvm:
-  - 2.6.3
+  - 2.6.5
 branches:
   only:
     - master
 deploy:
   provider: releases
   api_key: $GITHUB_AUTH_TOKEN
-  file: musl.tar.gz
+  file: libxml2.tar.gz
   skip_cleanup: true
