--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+os: osx
+osx_image: xcode10.2
 language: ruby
 dist: bionic
 rvm:
@@ -8,5 +10,5 @@ branches:
 deploy:
   provider: releases
   api_key: $GITHUB_AUTH_TOKEN
-  file: tcc.tar.gz
+  file: emacs.tar.gz
   skip_cleanup: true
